插入外部 pdf 文档的特定页面，用于文中的引用。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -582,6 +582,8 @@ endif
 \section{参考资料}%
 \label{sec:latex-refs}
 
+\includepdf[pages=15-16,link=true]{books/lshort-zh-cn.pdf}
+
 \LaTeX{} 参考资料网址：
 \begin{itemize}
     \item 官方网址： \href{https://www.ctan.org/}{https://www.ctan.org/}
