可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -510,7 +510,7 @@ endif
 这条命令还有可选参数。
 如果没有设置可选参数的话，参数的取值为缺省值。
 对于文档类 \texttt{article}, 纸张的缺省规格为美式信纸
-\texttt{letterpaper}（$8.5\times11$英寸），字体的缺省大小为 \texttt{10pt}.
+\texttt{letterpaper}（\(8.5\times11\)英寸），字体的缺省大小为 \texttt{10pt}.
 
 \begin{latex}\label{tex:environment}
     环境
