--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -593,6 +593,11 @@ endif
     在文件 \directory{/Documents/learn-latex/basic-01/text.tex}
     中按提示输入相应的文字后，编译此文件, 观察 pdf 输出。
 \end{exercise}
+
+\begin{exercise}\label{ex:basic-01-text-a}
+    在文件 \directory{/Documents/learn-latex/basic-01/text-a.tex}
+    中按提示输入相应的文字后，编译此文件, 观察 pdf 输出。
+\end{exercise}
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
 \newpage
