learn-latex 增加一个分享，说明模板使用者不需要学习模板设计者需要的知识。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -598,6 +598,15 @@ endif
     在文件 \directory{/Documents/learn-latex/basic-01/text-a.tex}
     中按提示输入相应的文字后，编译此文件, 观察 pdf 输出。
 \end{exercise}
+\begin{share}\label{share:user-designer}
+    更多的字体命令，参见
+    \hyperlink{books/lshort-zh-cn.pdf.74}%
+    {《一份不太简短的LATEX介绍》表 5.1, 5.2, 5.3}.
+    一个模板的使用者通常不需要关心太多的字体命令，
+    因为模板的制作者已经在模板中设计好了。
+    使用者关注的是内容写作，格式和排版应该交给模板的制作者。
+\end{share}
+
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
 \newpage
