glossaries: 增加 环境、注释、文档类。

--- a/glossaries.tex
+++ b/glossaries.tex
@@ -22,13 +22,35 @@
     sort={parameter}
 }
 
-\newglossaryentry{feature}{
-  name={特征},
-  description={\emph{Feature}},
-  sort={tz}
+\newglossaryentry{hj}{
+    name={环境},
+    description={\emph{Environment}},
+    sort={hj}
+}
+\newglossaryentry{hj-en}{
+    name={Environment},
+    description={\emph{环境}},
+    sort={Environment}
 }
 
-\newglossaryentry{feature2}{
-  name={Feature},
-  description={特征},
+\newglossaryentry{zs}{
+    name={注释},
+    description={\emph{Comment}},
+    sort={zs}
+}
+\newglossaryentry{zs-en}{
+    name={Comment},
+    description={\emph{注释}},
+    sort={Comment}
+}
+
+\newglossaryentry{wdl}{
+    name={文档类},
+    description={\emph{documentclass}},
+    sort={wdl}
+}
+\newglossaryentry{wdl-en}{
+    name={documentclass},
+    description={\emph{文档类}},
+    sort={documentclass}
 }
