learn-latex 增加知识点 宏包 (package).

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -607,6 +607,14 @@ endif
     使用者关注的是内容写作，格式和排版应该交给模板的制作者。
 \end{share}
 
+\begin{latex}\label{tex:package}
+    在使用 \LaTeX\ 时，时常需要依赖一些扩展来增强或补充 \LaTeX\ 的功能，
+    比如排版复杂的表格、插入图片、增加颜色甚至超链接等等。
+    这些扩展称为
+    \emph{\gls{hb}} (\gls{hb-en}).
+\end{latex}
+宏包的详情可以参见 \hyperlink{books/lshort-zh-cn.pdf.18}%
+{《一份不太简短的LATEX介绍》\S1.4.2}.
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
 \newpage
