可以忽略的微小更新

--- a/learn-latex/basic-01/text-a.tex
+++ b/learn-latex/basic-01/text-a.tex
@@ -2,9 +2,9 @@
 %!TEX encoding = UTF-8 Unicode
 \documentclass[a5paper,12pt]{ctexart}
 \begin{document}
-% 待完成学习：在「Normal text」后面输入「Hello, world!」
+% 待完成学习：在冒号后面输入「Hello, world!」
 Normal text:
 
-% 待完成学习：在『普通字体：』 后面输入『你好，世界！』.
+% 待完成学习：在冒号后面输入『你好，世界！』.
 普通字体：
 \end{document}
