--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -708,7 +708,9 @@ endif
         \end{itemize}
 \end{itemize}
 
-\includepdf[pages=16-17,link=true]{books/lshort-zh-cn.pdf}
+\includepdf[pages=16-18,link=true]{books/lshort-zh-cn.pdf}
+\includepdf[pages=74,link=true]{books/lshort-zh-cn.pdf}
+
 \chapter{Git 使用教程}%
 \label{cha:git-tips}
 
