--- a/learn-latex/basic-01/text-b.tex
+++ b/learn-latex/basic-01/text-b.tex
@@ -6,35 +6,35 @@
 
 \textbf{输入中文}
 
-% 待完成学习：在『普通字体：』 后面输入『你好，世界！』.
+% 已完成学习：在冒号后面输入『你好，世界！』.
 普通字体：你好，世界！
 
-% 待完成学习：在『加粗字体：』 后面输入『\textbf{你好，世界！}』.
+% 待完成学习：在冒号后面输入『\textbf{你好，世界！}』.
 加粗字体：
 
-% 待完成学习：在『意大利斜体：』 后面输入『\textit{你好，世界！}』.
+% 待完成学习：在冒号后面输入『\textit{你好，世界！}』.
 意大利斜体：
 
-% 待完成学习：在『最大字体：』 后面输入『{\Huge 你好，世界！}』.
+% 待完成学习：在冒号后面输入『{\Huge 你好，世界！}』.
 最大字体：
 
-% 待完成学习：在『最小字体：』 后面输入『{\tiny 你好，世界！}』.
+% 待完成学习：在冒号后面输入『{\tiny 你好，世界！}』.
 最小字体：
 
 \textbf{输入英文}
 
-% 待完成学习：在『普通字体：』 后面输入「Hello, world!」.
-： Hello, world!
+% 已完成学习：在冒号后面输入「Hello, world!」.
+普通字体： Hello, world!
 
-% 待完成学习：在『加粗字体：』 后面输入「\textbf{Hello, world!}」.
+% 待完成学习：在冒号后面输入「\textbf{Hello, world!}」.
 加粗字体：
 
-% 待完成学习：在『意大利斜体：』 后面输入「\textit{Hello, world!}」.
+% 待完成学习：在冒号后面输入「\textit{Hello, world!}」.
 意大利斜体：
 
-% 待完成学习：在『最大字体：』 后面输入『{\Huge Hello, world!}』.
+% 待完成学习：在冒号后面输入『{\Huge Hello, world!}』.
 最大字体：
 
-% 待完成学习：在『最小字体：』 后面输入『{\tiny Hello, world!}』.
+% 待完成学习：在冒号后面输入『{\tiny Hello, world!}』.
 最小字体：
 \end{document}
