--- a/learn-latex/basic-01/text-en-a.tex
+++ b/learn-latex/basic-01/text-en-a.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
 \begin{document}
-% 待完成学习：在「Normal text」后面输入「Hello, world!」
+% 待完成学习：在冒号后面输入「Hello, world!」
 Normal text: 
 \end{document}
