--- a/learn-latex/basic-01/text-en-b.tex
+++ b/learn-latex/basic-01/text-en-b.tex
@@ -1,5 +1,5 @@
 \documentclass[a5paper,12pt]{article}
 \begin{document}
-% 待完成学习：在「Normal text」后面输入「Hello, world!」
+% 已完成学习：在冒号后面输入「Hello, world!」
 Normal text: Hello, world! 
 \end{document}
