learn-latex 增加 \subsection{输入数学公式}。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -607,6 +607,14 @@ endif
     使用者关注的是内容写作，格式和排版应该交给模板的制作者。
 \end{share}
 
+\subsection{输入数学公式}%
+\label{sub:latex-math}
+
+\begin{latex}\label{tex:math}
+    数学公式有两种排版方式：其一是与文字混排，称为\textbf{行内公式}；
+    其二是单独列为一行排版，称为\textbf{行间公式}。
+\end{latex}
+
 \begin{latex}\label{tex:package}
     在使用 \LaTeX\ 时，时常需要依赖一些扩展来增强或补充 \LaTeX\ 的功能，
     比如排版复杂的表格、插入图片、增加颜色甚至超链接等等。
