learn-latex 增加知识点 导言区。

--- a/glossaries.tex
+++ b/glossaries.tex
@@ -54,3 +54,26 @@
     description={\emph{文档类}},
     sort={documentclass}
 }
+
+\newglossaryentry{hb}{
+    name={宏包},
+    description={\emph{Package}},
+    sort={hb}
+}
+\newglossaryentry{hb-en}{
+    name={Package},
+    description={\emph{宏包}},
+    sort={Package}
+}
+
+\newglossaryentry{dyq}{
+    name={导言区},
+    description={\emph{Preamble}},
+    sort={dyq}
+}
+\newglossaryentry{dyq-en}{
+    name={Preamble},
+    description={\emph{导言区}},
+    sort={Preamble}
+}
+
