--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -23,7 +23,7 @@
 \usepackage[]{menukeys}
 \definecolor{geyecolor}{RGB}{199,237,204}%
 \pagecolor{geyecolor}
-\renewcommand{\lstlistingname}{\LaTeX{}模板}% Listing -> \LaTeX{}文档
+\renewcommand{\lstlistingname}{{\LaTeX}~模板}% Listing -> \LaTeX{}文档
 \lstdefinestyle{input}{
     language=[LaTeX]TeX,
     numbers=left,
