--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -24,6 +24,10 @@
 \definecolor{geyecolor}{RGB}{199,237,204}%
 \pagecolor{geyecolor}
 \renewcommand{\lstlistingname}{{\LaTeX}~模板}% Listing -> \LaTeX{}文档
+\lstdefinestyle{lst}{
+    escapeinside=``,
+    xleftmargin=.05\textwidth
+}
 \lstdefinestyle{input}{
     language=[LaTeX]TeX,
     numbers=left,
@@ -245,7 +249,7 @@ Virtualbox 虚拟机的安装分为两个步骤：
 \label{ssub:vim-config}
 
 本虚拟机中的配置文件为：
-\begin{lstlisting}[escapeinside=``]
+\begin{lstlisting}[style=lst]
 ~/.df/dotfiles/vimrc
 ~/.df/dotfiles-local/gvimrc
 ~/.vimrc_customized
@@ -260,14 +264,14 @@ Virtualbox 虚拟机的安装分为两个步骤：
 \label{ssub:vim-gui-config-customized}
 
 打开 \lstinline{~/.gvimrc_customized}, 进行 Gvim 的个性化设置。例如：
-\begin{lstlisting}[escapeinside=``]
+\begin{lstlisting}[style=lst]
 set guifont=Monospace\ 13
 set linespace=4
 \end{lstlisting}
 对于以上两个选项的设置，可以用命令 \lstinline{:h guifont} 和
 \lstinline{:h linespace} 查看帮助。
 例如，在 \lstinline{guifont} 的设置帮助中，有建议在中文系统下，使用如下配置：
-\begin{lstlisting}[escapeinside=``]
+\begin{lstlisting}[xleftmargin=.04\textwidth]
 if has("gui_gtk3")
   set guifont=Bitstream\ Vera\ Sans\ Mono\ 12,Fixed\ 12
   set guifontwide=Microsoft\ Yahei\ 12,WenQuanYi\ Zen\ Hei\ 12
