learn-latex 1. 增加 输入带编号的行间数学公式； 2. 使用 snippet.

--- a/glossaries.tex
+++ b/glossaries.tex
@@ -77,3 +77,14 @@
     sort={Preamble}
 }
 
+\newglossaryentry{pd}{
+    name={片段},
+    description={\emph{snippet}},
+    sort={pd}
+}
+\newglossaryentry{pd-en}{
+    name={snippet},
+    description={\emph{片段}},
+    sort={snippet}
+}
+
