--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -647,6 +647,33 @@ endif
 宏包的详情可以参见 \hyperlink{books/lshort-zh-cn.pdf.18}%
 {《一份不太简短的LATEX介绍》\S1.4.2}.
 我们可以在导言区中使用 \lstinline|\usepackage{ }| 调用宏包。
+排版数学公式，我们通常使用宏包 \texttt{amsmath}.
+这个宏包由美国数学学会开发，扩展了 {\LaTeX} 原生的数学公式排版功能。
+
+\lstinputlisting[
+    style=input-float,
+    caption={输入带编号的行间数学公式},
+    label=basic-02-math-b]%
+{learn-latex/basic-02/math-b.tex}
+\begin{exercise}\label{ex:basic-02-math-b}
+    在文件 \directory{/Documents/learn-latex/basic-02/math-b.tex}
+    中按提示输入相应的内容后，编译此文件, 观察 pdf 输出。
+\end{exercise}
+
+要完成练习~\ref{ex:basic-02-math-b}, 我们需要输入以下内容：
+\begin{lstlisting}[style=lst]
+\begin{equation}
+    1 + 2 = 3.
+\end{equation}
+\end{lstlisting}
+注意到我们有可能输入环境 \texttt{equation}
+很多次，而对于这种多次重复的输入，我们可以使用 \emph{\gls{pd}} (\gls{pd-en})
+来节省输入时间。
+在 vscode 编辑器中, LaTeX-Workshop 插件已经为我们提供了常用的片段。
+比如，输入 BEQ, 然后按 \keys{Tab} 键，环境就自动跳出来，并且光标移动到了
+需要输入的位置。
+接着输入 \(1 + 2 = 3\) 就完成练习~\ref{ex:basic-02-math-b} 了。
+
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
 \newpage
