title: 修改副标题。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -52,7 +52,7 @@
 }
 
 \title{开源写作工具快速上手指南}
-\subtitle{学习写作排版利器 \LaTeX{} 和团队协作神器 Git}
+\subtitle{写作排版利器 \LaTeX{} 和团队协作神器 Git}
 
 \author{甘湘华}
 \institute{西南财经大学} % Commented out in the cls file.
