可以忽略的微小更新

--- a/glossaries.tex
+++ b/glossaries.tex
@@ -79,12 +79,12 @@
 
 \newglossaryentry{pd}{
     name={片段},
-    description={\emph{snippet}},
+    description={\emph{Snippet}},
     sort={pd}
 }
 \newglossaryentry{pd-en}{
-    name={snippet},
+    name={Snippet},
     description={\emph{片段}},
-    sort={snippet}
+    sort={Snippet}
 }
 
