--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -664,12 +664,14 @@ endif
     caption={输入带编号的行间数学公式},
     label=basic-02-math-b]%
 {learn-latex/basic-02/math-b.tex}
-\begin{exercise}\label{ex:basic-02-math-b}
-    在文件 \directory{/Documents/learn-latex/basic-02/math-b.tex}
-    中按提示输入相应的内容后，编译此文件, 观察 pdf 输出。
+\begin{exercise}\label{ex:basic-02-math-c}
+    在 \href{learn-latex/basic-02/math-b.tex}{文件}
+    \directory{/Documents/learn-latex/basic-02/math-b.tex}
+    中按提示输入相应的内容后，将文件保存为 \texttt{math-c.tex}.
+    编译此文件, 观察 pdf 输出。
 \end{exercise}
 
-要完成练习~\ref{ex:basic-02-math-b}, 我们需要输入以下内容：
+要完成练习~\ref{ex:basic-02-math-c}, 我们需要输入以下内容：
 \begin{lstlisting}[style=lst]
 \begin{equation}
     1 + 2 = 3.
@@ -681,7 +683,10 @@ endif
 在 vscode 编辑器中, LaTeX-Workshop 插件已经为我们提供了常用的片段。
 比如，输入 BEQ, 然后按 \keys{Tab} 键，环境就自动跳出来，并且光标移动到了
 需要输入的位置。
-接着输入 \(1 + 2 = 3\) 就完成练习~\ref{ex:basic-02-math-b} 了。
+接着输入 \(1 + 2 = 3\) 就完成练习~\ref{ex:basic-02-math-c} 了。
+完成此练习的演示可以参见
+\href{../media-toolsRes/screencasts/math-c.mp4}{录屏文件}
+\directory{/media/screencasts/math-c.mp4}.
 
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
