learn-latex 增加练习，学习公式的自动编号。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -688,6 +688,21 @@ endif
 \href{../media-toolsRes/screencasts/math-c.mp4}{录屏文件}
 \directory{/media/screencasts/math-c.mp4}.
 
+查看 pdf 输出，我们会看到公式的右侧有一个编号 (1).
+这个编号是自动生成的，并且会根据这个公式在正文中的位置，自动变化。
+比如，我们如果在这个公式之前插入一个公式，那么这个公式的编号就会变成 (2).
+
+\begin{exercise}\label{ex:basic-02-math-d}
+    在 \href{learn-latex/basic-02/math-c.tex}{文件}
+    \directory{/Documents/learn-latex/basic-02/math-c.tex}
+    中的公式 (1) 的前面插入带编号的公式 \(1 + 1 = 2\),
+    将这个文件另存为 \texttt{math-d.tex}.
+    编译此文件，观察 pdf 输出。
+\end{exercise}
+\noindent 详情参见 \href{../media-toolsRes/screencasts/math-d.mp4}{录屏文件}
+\directory{/media/screencasts/math-d.mp4}.
+
+如果我们在文档中需要引用公式，
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
 \newpage
