--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -20,7 +20,7 @@
 % \usepackage[nogroupskip]{glossaries-extra}
 \makeglossaries{}
 
-\usepackage[]{menukeys}
+\usepackage{menukeys}
 \definecolor{geyecolor}{RGB}{199,237,204}%
 \pagecolor{geyecolor}
 \renewcommand{\lstlistingname}{{\LaTeX}~模板}% Listing -> \LaTeX{}文档
@@ -201,7 +201,7 @@ Virtualbox 虚拟机的安装分为两个步骤：
 \subsection{调整虚拟机窗口大小}%
 \label{ssub:vbox-set-window-size}
 
-此虚拟机的窗口大小缺省设置为 1360 x 768.
+此虚拟机的窗口大小缺省设置为 \(1360 \times 768\).
 如果需要更大的窗口，可以在打开虚拟机后，于窗口顶部菜单选择
 \menu{视图 > 自动调整尺寸}，然后最大化虚拟机窗口。
 （在 Linux 和  Windows 上通常为点击右上角的方框，在 Mac 上点击左上的放大键）
@@ -517,8 +517,8 @@ endif
     一些 \LaTeX\ 命令可以接收 \emph{\gls{cs}} (\gls{cs-en})，
     参数的内容会影响命令的效果。
     \LaTeX\ 的参数分为可选参数和必选参数。
-    可选参数以方括号 \texttt[ ~ \texttt] 包裹；
-    必选参数一般以花括号 \texttt\{ ~ \texttt\} 包裹。
+    可选参数以方括号 \texttt[ ~\texttt] 包裹；
+    必选参数一般以花括号 \texttt\{ ~\texttt\} 包裹。
     % 还有些命令可以带一个星号 \texttt*，
     % 带星号和不带星号的命令效果有一定差异。
     % 初次接触这些概念时，可以粗略地把星号看作一种特殊的可选参数。
@@ -567,7 +567,7 @@ endif
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=1.0\textwidth]%
-  {../media-toolsRes/screenshots/learn-latex/pdflatex-error.png}
+  {media/screenshots/learn-latex/pdflatex-error.png}
   \caption{输入中文后的编译错误}%
   \label{fig:pdflatex-error}
 \end{figure}
@@ -577,7 +577,7 @@ endif
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=1.0\textwidth]%
-  {../media-toolsRes/screenshots/learn-latex/pdflatex-error-output.png}
+  {media/screenshots/learn-latex/pdflatex-error-output.png}
   \caption{编译错误信息 --- OUTPUT}%
   \label{fig:pdflatex-error-output}
 \end{figure}
@@ -685,7 +685,7 @@ endif
 需要输入的位置。
 接着输入 \(1 + 2 = 3\) 就完成练习~\ref{ex:basic-02-math-c} 了。
 完成此练习的演示可以参见
-\href{../media-toolsRes/screencasts/math-c.mp4}{录屏文件}
+\href{media/screencasts/math-c.mp4}{录屏文件}
 \directory{/media/screencasts/math-c.mp4}.
 
 查看 pdf 输出，我们会看到公式的右侧有一个编号 (1).
@@ -699,7 +699,7 @@ endif
     将这个文件另存为 \texttt{math-d.tex}.
     编译此文件，观察 pdf 输出。
 \end{exercise}
-\noindent 详情参见 \href{../media-toolsRes/screencasts/math-d.mp4}{录屏文件}
+\noindent 详情参见 \href{media/screencasts/math-d.mp4}{录屏文件}
 \directory{/media/screencasts/math-d.mp4}.
 
 如果我们在文档中需要引用公式，
@@ -1360,4 +1360,5 @@ sudo chown -R ganx: /opt/Zotero_linux-x86_64
 
 \printindex
 \printglossary[title={术语表}]
+
 \end{document}
