可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -694,9 +694,9 @@ endif
 比如，我们如果在这个公式之前插入一个公式，那么这个公式的编号就会变成 (2).
 
 \begin{exercise}\label{ex:basic-02-math-d}
-    在 \href{learn-latex/basic-02/math-c.tex}{文件}
+    在\href{learn-latex/basic-02/math-c.tex}{文件}
     \directory{/Documents/learn-latex/basic-02/math-c.tex}
-    中的公式 (1) 的前面插入带编号的公式 \(1 + 1 = 2\),
+    中的公式~(1)~的前面插入带编号的公式 \(1\,+\,1 = 2\),
     将这个文件另存为 \texttt{math-d.tex}.
     编译此文件，观察 pdf 输出。
 \end{exercise}
