可以忽略的微小更新：修改文件名或者是标签名等等。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -209,7 +209,7 @@ Virtualbox 虚拟机的安装分为两个步骤：
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=1.0\textwidth]%
-  {media/screenshots/vm/vlcsnap-2020-01-28-01h24m55s147-vm.png}
+  {media/shots/vm/vlcsnap-2020-01-28-01h24m55s147-vm.png}
   \caption{\menu{视图 > 自动调整尺寸}}%
   \label{fig:vm-display}
 \end{figure}
@@ -568,7 +568,7 @@ endif
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=1.0\textwidth]%
-  {media/screenshots/learn-latex/pdflatex-error.png}
+  {media/shots/learn-latex/pdflatex-error.png}
   \caption{输入中文后的编译错误}%
   \label{fig:pdflatex-error}
 \end{figure}
@@ -578,7 +578,7 @@ endif
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=1.0\textwidth]%
-  {media/screenshots/learn-latex/pdflatex-error-output.png}
+  {media/shots/learn-latex/pdflatex-error-output.png}
   \caption{编译错误信息 --- OUTPUT}%
   \label{fig:pdflatex-error-output}
 \end{figure}
@@ -603,12 +603,12 @@ endif
 编译命令应该是 \texttt{xelatex}.
 第二行表明了这个文件的编码是 \texttt{UTF-8}, 这是中文文档通常使用的编码。
 
-\begin{exercise}\label{ex:basic-01-text-a}
+\begin{exercise}\label{ex:text-a}
     在文件 \directory{/Documents/learn-latex/basic-01/text-a.tex}
     中按提示输入相应的文字后，编译此文件, 观察 pdf 输出。
 \end{exercise}
 
-\begin{exercise}\label{ex:basic-01-text-b}
+\begin{exercise}\label{ex:text-b}
     在文件 \directory{/Documents/learn-latex/basic-01/text-b.tex}
     中按提示输入相应的文字后，编译此文件, 观察 pdf 输出。
 \end{exercise}
@@ -637,7 +637,7 @@ endif
     caption={数学公式输入 --- 行内公式},
     label=basic-02-math-a]%
 {learn-latex/basic-02/math-a.tex}
-\begin{exercise}\label{ex:basic-02-math-a}
+\begin{exercise}\label{ex:math-a}
     在文件 \directory{/Documents/learn-latex/basic-02/math-a.tex}
     中按提示输入相应的内容后，编译此文件, 观察 pdf 输出。
 \end{exercise}
@@ -665,7 +665,7 @@ endif
     caption={输入带编号的行间数学公式},
     label=basic-02-math-b]%
 {learn-latex/basic-02/math-b.tex}
-\begin{exercise}\label{ex:basic-02-math-c}
+\begin{exercise}\label{ex:math-c}
     在 \href{learn-latex/basic-02/math-b.tex}{文件}
     \directory{/Documents/learn-latex/basic-02/math-b.tex}
     中按提示输入相应的内容后，将文件保存为 \texttt{math-c.tex}.
@@ -693,7 +693,7 @@ endif
 这个编号是自动生成的，并且会根据这个公式在正文中的位置，自动变化。
 比如，我们如果在这个公式之前插入一个公式，那么这个公式的编号就会变成 (2).
 
-\begin{exercise}\label{ex:basic-02-math-d}
+\begin{exercise}\label{ex:math-d}
     在\href{learn-latex/basic-02/math-c.tex}{文件}
     \directory{/Documents/learn-latex/basic-02/math-c.tex}
     中的公式~(1)~的前面插入带编号的公式 \(1\,+\,1 = 2\),
@@ -709,7 +709,7 @@ endif
 还可以用 \texttt{tag} 命令手动修改公式编号，
 或者用 \texttt{notag} 命令取消为公式编号。
 
-\begin{exercise}\label{ex:basic-02-math-e}
+\begin{exercise}\label{ex:math-e}
     在 \href{learn-latex/basic-02/math-e.tex}{文件}
     \directory{/Documents/learn-latex/basic-02/math-e.tex}
     中按提示输入相应的内容后，将文件保存为 \texttt{math-e.tex}.
@@ -941,7 +941,7 @@ with \ldots.
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-13-03.png}
+  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-13-03.png}
   \caption{搜索 Perishables Joint Pricing and Inventory Control}%
   \label{fig:ludwig-search}
 \end{figure}
@@ -969,42 +969,42 @@ SIMILAR 提示。
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-16-43.png}
+  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-16-43.png}
   \caption{搜索结果 1}%
   \label{fig:ludwig-result-1}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-16-55.png}
+  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-16-55.png}
   \caption{搜索结果 2}%
   \label{fig:ludwig-result-2}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-17-32.png}
+  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-17-32.png}
   \caption{筛选搜索范围}%
   \label{fig:ludwig-filter}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-18-09.png}
+  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-18-09.png}
   \caption{搜索结果 3}%
   \label{fig:ludwig-result-3}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-19-22.png}
+  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-19-22.png}
   \caption{去掉 Perashables 后的搜索结果}%
   \label{fig:ludwig-result-4}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from
+  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from
   2019-12-23 21-20-01.png}
   \caption{去掉 Perashables 后且使用小写字母的搜索结果}%
   \label{fig:ludwig-result-5}
@@ -1029,27 +1029,27 @@ SIMILAR 提示。
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-52-45.png}
+  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-52-45.png}
   \caption{设定共享目录 --- 示意图 1}
 \end{figure}
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-53-28.png}
+  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-53-28.png}
   \caption{设定共享目录 --- 示意图 2}
 \end{figure}
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-54-41.png}
+  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-54-41.png}
   \caption{设定共享目录 --- 示意图 3}
 \end{figure}
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-55-59.png}
+  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-55-59.png}
   \caption{设定共享目录 --- 示意图 4}
 \end{figure}
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-59-22.png}
+  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-59-22.png}
   \caption{设定共享目录 --- 示意图 5}
 \end{figure}
 
