可以忽略的微小更新

--- a/learn-latex/basic-01/text-a.tex
+++ b/learn-latex/basic-01/text-a.tex
@@ -2,9 +2,6 @@
 %!TEX encoding = UTF-8 Unicode
 \documentclass[a5paper,12pt]{ctexart}
 \begin{document}
-% 待完成学习：在冒号后面输入「Hello, world!」
+% 待完成学习：在第六行末尾输入『你好，世界！』
 Normal text:
-
-% 待完成学习：在冒号后面输入『你好，世界！』.
-普通字体：
 \end{document}
