--- a/learn-latex/basic-01/text-b.tex
+++ b/learn-latex/basic-01/text-b.tex
@@ -24,13 +24,13 @@
 \textbf{输入英文}
 
 % 已完成学习：在冒号后面输入「Hello, world!」.
-普通字体： Hello, world!
+普通字体 (Normal)： Hello, world!
 
 % 待完成学习：在冒号后面输入「\textbf{Hello, world!}」.
-加粗字体：
+加粗字体 (Bold face)：
 
 % 待完成学习：在冒号后面输入「\textit{Hello, world!}」.
-意大利斜体：
+意大利斜体 (Italic)：
 
 % 待完成学习：在冒号后面输入『{\Huge Hello, world!}』.
 最大字体：
